# web

./: .gitignore  README.md  vercel.json
.github/ISSUE_TEMPLATE/: 10_bug_report.md  20_feature_request.md  99_question.md  config.yml
modules/python/: Makefile  pyproject.toml
modules/python/hmac/: func.py  main.py
modules/python/hwp_parser/: README.md  func.py  main.py
modules/python/markdown_table_string/: func.py  main.py
modules/python/query_beautifier/: INPUT.sql  OUTPUT.sql  func.py  main.py
modules/python/word_cloud_generator/: func.py  lorem-ipsum.txt  main.py  stopwords.txt
web/: package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite-plugin-copy-to-server.js  vite.config.ts
web/src/: app.d.ts  app.html  hooks.server.ts
web/src/lib/: constants.ts  examples.ts  store.ts  utils.ts
web/src/lib/asmr/: data.ts  interfaces.ts
web/src/lib/blog/: retrievePostList.ts  store.ts  types.ts
web/src/lib/echo/: services.ts
web/src/lib/pyodide/: bridge.ts
web/src/routes/: +layout.svelte  +page.svelte
web/static/asmr/: LICENSE.md
web/static/cat/: LICENSE.md
web/static/chill/: LICENSE.md
web/static/hmac/: func
web/static/hwp-parser/: client.py  func
web/static/markdown-table-string/: client.py  func
web/static/query-beautifier/: client.py  func
web/static/wordcloud-generator/: client.py  func
ziplink/: package-lock.json  package.json  svelte.config.js  vite.config.ts
ziplink/src/: app.html  background.js
ziplink/src/routes/: +layout.svelte  +page.svelte
ziplink/static/: manifest.json
(+92 files in other folders)
